tmp commit, working on typeReference refactoring; also put json back to 2.19.2